--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "typescript": "^5.4.2"
   },
   "name": "ts-pretty",
@@ -8,7 +9,7 @@
   "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --loader ts-node/esm/transpile-only src/main.ts",
+    "dev": "node --trace-warnings --loader ts-node/esm/transpile-only src/main.ts",
     "start": "node build/main.js",
     "build": "tsc"
   },
