--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2022",
     "module": "ESNext",
     "outDir": "build",
-    "rootDir": "src",
+    "rootDir": "sections",
     "strict": true,
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
